fixed missing padding/margins in contact panels
git-svn-id: http://svn.civicrm.org/civicrm/branches/v3.1.usability@24345 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -10,7 +10,7 @@
     display   	    : none;
 }
 
-#crm-container .clear {
+contact#crm-container .clear {
     clear 	    : both;
 }
 
@@ -1562,8 +1562,6 @@ div.grippie {
 
 #crm-container div.contact_panel *, 
 #crm-container div#contactTopBar * {
-	padding:0px;
-	margin:0px;
 	border:0px;
 	}
 
